progs/cpp/935817f4-4082-4270-9d21-d0a8ee82ccff/err.txt
progs/cpp/935817f4-4082-4270-9d21-d0a8ee82ccff/prog.cpp:5:14: warning: missing terminating " character [enabled by default]
      cout << ";
              ^
progs/cpp/935817f4-4082-4270-9d21-d0a8ee82ccff/prog.cpp:5:6: error: missing terminating " character
      cout << ";
      ^
progs/cpp/935817f4-4082-4270-9d21-d0a8ee82ccff/prog.cpp: In function ‘int main()’:
progs/cpp/935817f4-4082-4270-9d21-d0a8ee82ccff/prog.cpp:6:6: error: expected primary-expression before ‘return’
      return 0;
      ^
progs/cpp/935817f4-4082-4270-9d21-d0a8ee82ccff/prog.cpp:6:6: error: expected ‘;’ before ‘return’
